--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ipl-analysis",
   "version": "0.1.0",
-  "homepage": "https://kunalprakash1309.github.io/ipl-analysis",
+  "homepage": "https://kunalprakash1309.github.io/ipl-analysis/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
