Added PWA feature

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "IPL Analysis",
+  "name": "IPL Analysis by Team Z",
   "icons": [
     {
       "src": "favicon.ico",
